--- a/1-4/t1.html
+++ b/1-4/t1.html
@@ -21,6 +21,10 @@
     <h4 class="t2">banana</h4>
     <button>change color</button>
     <button>change text</button>
+    <!-- t4 -->
+    <div id="t4"></div>
+    <!-- t5 -->
+    <div id="t5"></div>
     <script src="main.js"></script>
 </body>
 </html>
